[gd_scene load_steps=22 format=3 uid="uid://coq8ek33qhmrk"]

[ext_resource type="Script" uid="uid://cupuco4aa668u" path="res://Main.gd" id="1_n6cgm"]
[ext_resource type="Script" uid="uid://cq7whmm4ig54m" path="res://Player.gd" id="2_4vhcq"]
[ext_resource type="Script" uid="uid://2eeyvy10iwrt" path="res://UI.gd" id="3_ui_script"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.1, 0.1, 0.15, 1)
ambient_light_source = 3
ambient_light_color = Color(0.3, 0.4, 0.6, 1)
ambient_light_energy = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gun"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="BoxMesh" id="BoxMesh_gun"]
size = Vector3(0.2, 0.15, 0.8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_barrel"]
albedo_color = Color(0.1, 0.1, 0.1, 1)
metallic = 0.9
roughness = 0.1

[sub_resource type="CylinderMesh" id="CylinderMesh_barrel"]
top_radius = 0.02
bottom_radius = 0.02
height = 0.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_floor"]
albedo_color = Color(0.3, 0.25, 0.2, 1)
roughness = 0.9

[sub_resource type="BoxMesh" id="BoxMesh_floor"]
size = Vector3(120, 0.5, 120)

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(120, 0.5, 120)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wall"]
albedo_color = Color(0.5, 0.4, 0.3, 1)
roughness = 0.8

[sub_resource type="BoxMesh" id="BoxMesh_wall"]
size = Vector3(120, 12, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_wall"]
size = Vector3(120, 12, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_obstacle"]
albedo_color = Color(0.6, 0.3, 0.2, 1)
roughness = 0.7

[sub_resource type="BoxMesh" id="BoxMesh_obstacle"]
size = Vector3(6, 4, 6)

[sub_resource type="BoxShape3D" id="BoxShape3D_obstacle"]
size = Vector3(6, 4, 6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_platform"]
albedo_color = Color(0.4, 0.4, 0.4, 1)
metallic = 0.3
roughness = 0.6

[sub_resource type="BoxMesh" id="BoxMesh_platform"]
size = Vector3(8, 0.5, 8)

[sub_resource type="BoxShape3D" id="BoxShape3D_platform"]
size = Vector3(8, 0.5, 8)

[node name="Main" type="Node3D"]
script = ExtResource("1_n6cgm")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_mask = 8
script = ExtResource("2_4vhcq")

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
environment = SubResource("Environment_1")

[node name="WeaponPoint" type="Node3D" parent="Player/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, -0.2, -0.5)

[node name="GunModel" type="MeshInstance3D" parent="Player/Camera3D/WeaponPoint"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 1.5, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_gun")
mesh = SubResource("BoxMesh_gun")

[node name="GunBarrel" type="MeshInstance3D" parent="Player/Camera3D/WeaponPoint/GunModel"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 1.5, 0, 0, -1)
material_override = SubResource("StandardMaterial3D_barrel")
mesh = SubResource("CylinderMesh_barrel")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_1")

[node name="Arena" type="StaticBody3D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="FloorMesh" type="MeshInstance3D" parent="Arena"]
material_override = SubResource("StandardMaterial3D_floor")
mesh = SubResource("BoxMesh_floor")

[node name="FloorCollision" type="CollisionShape3D" parent="Arena"]
shape = SubResource("BoxShape3D_1")

[node name="WallNorth" type="MeshInstance3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, -60)
material_override = SubResource("StandardMaterial3D_wall")
mesh = SubResource("BoxMesh_wall")

[node name="WallNorthCollision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, -60)
shape = SubResource("BoxShape3D_wall")

[node name="WallSouth" type="MeshInstance3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 60)
material_override = SubResource("StandardMaterial3D_wall")
mesh = SubResource("BoxMesh_wall")

[node name="WallSouthCollision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 60)
shape = SubResource("BoxShape3D_wall")

[node name="WallEast" type="MeshInstance3D" parent="Arena"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 60, 6, 0)
material_override = SubResource("StandardMaterial3D_wall")
mesh = SubResource("BoxMesh_wall")

[node name="WallEastCollision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 60, 6, 0)
shape = SubResource("BoxShape3D_wall")

[node name="WallWest" type="MeshInstance3D" parent="Arena"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, -60, 6, 0)
material_override = SubResource("StandardMaterial3D_wall")
mesh = SubResource("BoxMesh_wall")

[node name="WallWestCollision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, -60, 6, 0)
shape = SubResource("BoxShape3D_wall")

[node name="Obstacles" type="Node3D" parent="Arena"]

[node name="Obstacle1" type="MeshInstance3D" parent="Arena/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 1, -10)
material_override = SubResource("StandardMaterial3D_obstacle")
mesh = SubResource("BoxMesh_obstacle")

[node name="Obstacle1Collision" type="CollisionShape3D" parent="Arena/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 1, -10)
shape = SubResource("BoxShape3D_obstacle")

[node name="Obstacle2" type="MeshInstance3D" parent="Arena/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 1, -5)
material_override = SubResource("StandardMaterial3D_obstacle")
mesh = SubResource("BoxMesh_obstacle")

[node name="Obstacle2Collision" type="CollisionShape3D" parent="Arena/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 1, -5)
shape = SubResource("BoxShape3D_obstacle")

[node name="Obstacle3" type="MeshInstance3D" parent="Arena/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 1, 12)
material_override = SubResource("StandardMaterial3D_obstacle")
mesh = SubResource("BoxMesh_obstacle")

[node name="Obstacle3Collision" type="CollisionShape3D" parent="Arena/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 1, 12)
shape = SubResource("BoxShape3D_obstacle")

[node name="Obstacle4" type="MeshInstance3D" parent="Arena/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 1, 18)
material_override = SubResource("StandardMaterial3D_obstacle")
mesh = SubResource("BoxMesh_obstacle")

[node name="Obstacle4Collision" type="CollisionShape3D" parent="Arena/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 1, 18)
shape = SubResource("BoxShape3D_obstacle")

[node name="Obstacle5" type="MeshInstance3D" parent="Arena/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = SubResource("StandardMaterial3D_obstacle")
mesh = SubResource("BoxMesh_obstacle")

[node name="Obstacle5Collision" type="CollisionShape3D" parent="Arena/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_obstacle")

[node name="Platforms" type="Node3D" parent="Arena"]

[node name="Platform1" type="MeshInstance3D" parent="Arena/Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 3, -20)
material_override = SubResource("StandardMaterial3D_platform")
mesh = SubResource("BoxMesh_platform")

[node name="Platform1Collision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 3, -20)
shape = SubResource("BoxShape3D_platform")

[node name="Platform2" type="MeshInstance3D" parent="Arena/Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 2.5, 15)
material_override = SubResource("StandardMaterial3D_platform")
mesh = SubResource("BoxMesh_platform")

[node name="Platform2Collision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 2.5, 15)
shape = SubResource("BoxShape3D_platform")

[node name="Platform3" type="MeshInstance3D" parent="Arena/Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 4, 22)
material_override = SubResource("StandardMaterial3D_platform")
mesh = SubResource("BoxMesh_platform")

[node name="Platform3Collision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 4, 22)
shape = SubResource("BoxShape3D_platform")

[node name="Platform4" type="MeshInstance3D" parent="Arena/Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 5, -10)
material_override = SubResource("StandardMaterial3D_platform")
mesh = SubResource("BoxMesh_platform")

[node name="Platform4Collision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 5, -10)
shape = SubResource("BoxShape3D_platform")

[node name="Platform5" type="MeshInstance3D" parent="Arena/Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 6, 5)
material_override = SubResource("StandardMaterial3D_platform")
mesh = SubResource("BoxMesh_platform")

[node name="Platform5Collision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 6, 5)
shape = SubResource("BoxShape3D_platform")

[node name="Platform6" type="MeshInstance3D" parent="Arena/Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 7, 25)
material_override = SubResource("StandardMaterial3D_platform")
mesh = SubResource("BoxMesh_platform")

[node name="Platform6Collision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 7, 25)
shape = SubResource("BoxShape3D_platform")

[node name="Platform7" type="MeshInstance3D" parent="Arena/Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 8, -25)
material_override = SubResource("StandardMaterial3D_platform")
mesh = SubResource("BoxMesh_platform")

[node name="Platform7Collision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 8, -25)
shape = SubResource("BoxShape3D_platform")

[node name="Platform8" type="MeshInstance3D" parent="Arena/Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 9, 8)
material_override = SubResource("StandardMaterial3D_platform")
mesh = SubResource("BoxMesh_platform")

[node name="Platform8Collision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 9, 8)
shape = SubResource("BoxShape3D_platform")

[node name="Platform9" type="MeshInstance3D" parent="Arena/Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 10, -12)
material_override = SubResource("StandardMaterial3D_platform")
mesh = SubResource("BoxMesh_platform")

[node name="Platform9Collision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 10, -12)
shape = SubResource("BoxShape3D_platform")

[node name="Platform10" type="MeshInstance3D" parent="Arena/Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28, 11, -30)
material_override = SubResource("StandardMaterial3D_platform")
mesh = SubResource("BoxMesh_platform")

[node name="Platform10Collision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28, 11, -30)
shape = SubResource("BoxShape3D_platform")

[node name="Platform11" type="MeshInstance3D" parent="Arena/Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -40, 12, -8)
material_override = SubResource("StandardMaterial3D_platform")
mesh = SubResource("BoxMesh_platform")

[node name="Platform11Collision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -40, 12, -8)
shape = SubResource("BoxShape3D_platform")

[node name="Platform12" type="MeshInstance3D" parent="Arena/Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 13, 40)
material_override = SubResource("StandardMaterial3D_platform")
mesh = SubResource("BoxMesh_platform")

[node name="Platform12Collision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 13, 40)
shape = SubResource("BoxShape3D_platform")

[node name="Platform13" type="MeshInstance3D" parent="Arena/Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 14, 30)
material_override = SubResource("StandardMaterial3D_platform")
mesh = SubResource("BoxMesh_platform")

[node name="Platform13Collision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 14, 30)
shape = SubResource("BoxShape3D_platform")

[node name="Platform14" type="MeshInstance3D" parent="Arena/Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 42, 15, -15)
material_override = SubResource("StandardMaterial3D_platform")
mesh = SubResource("BoxMesh_platform")

[node name="Platform14Collision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 42, 15, -15)
shape = SubResource("BoxShape3D_platform")

[node name="Platform15" type="MeshInstance3D" parent="Arena/Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16, 0)
material_override = SubResource("StandardMaterial3D_platform")
mesh = SubResource("BoxMesh_platform")

[node name="Platform15Collision" type="CollisionShape3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16, 0)
shape = SubResource("BoxShape3D_platform")

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIControl" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ui_script")

[node name="WaveInfo" type="VBoxContainer" parent="UI/UIControl"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -10.0

[node name="WaveLabel" type="Label" parent="UI/UIControl/WaveInfo"]
layout_mode = 2
text = "Wave: 1"

[node name="ZombiesLabel" type="Label" parent="UI/UIControl/WaveInfo"]
layout_mode = 2
text = "Zombies: 8"

[node name="PlayerInfo" type="VBoxContainer" parent="UI/UIControl"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -80.0
offset_right = -10.0
offset_bottom = -10.0

[node name="HealthLabel" type="Label" parent="UI/UIControl/PlayerInfo"]
layout_mode = 2
text = "Health: 100/100"

[node name="HealthBar" type="ProgressBar" parent="UI/UIControl/PlayerInfo"]
layout_mode = 2
value = 100.0

[node name="AmmoLabel" type="Label" parent="UI/UIControl/PlayerInfo"]
layout_mode = 2
text = "Ammo: 30/30"

[node name="Crosshair" type="Control" parent="UI/UIControl"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0

[node name="CrosshairV" type="ColorRect" parent="UI/UIControl/Crosshair"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -8.0
offset_right = 1.0
offset_bottom = 8.0
color = Color(1, 1, 1, 0.8)

[node name="CrosshairH" type="ColorRect" parent="UI/UIControl/Crosshair"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -1.0
offset_right = 8.0
offset_bottom = 1.0
color = Color(1, 1, 1, 0.8)

[node name="WaveMessage" type="Label" parent="UI/UIControl"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
text = "Wave 1 Starting!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverPanel" type="Panel" parent="UI/UIControl"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/UIControl/GameOverPanel"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0

[node name="GameOverLabel" type="Label" parent="UI/UIControl/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/UIControl/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="UI/UIControl/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_color = Color(1, 0.9, 0.7, 1)
light_energy = 1.2
shadow_enabled = true
directional_shadow_mode = 1
directional_shadow_max_distance = 150.0

[node name="Environment" type="Node3D" parent="."]

[node name="AmbientLight" type="OmniLight3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12, 0)
light_color = Color(0.4, 0.5, 0.8, 1)
light_energy = 0.4
omni_range = 80.0

[node name="SpotLight1" type="SpotLight3D" parent="Environment"]
transform = Transform3D(0.707107, -0.5, 0.5, 0.5, 0.853553, 0.146447, -0.5, 0.146447, 0.853553, -20, 15, -20)
light_color = Color(1, 0.8, 0.6, 1)
light_energy = 3.0
shadow_enabled = true
spot_range = 35.0
spot_angle = 35.0

[node name="SpotLight2" type="SpotLight3D" parent="Environment"]
transform = Transform3D(-0.707107, -0.5, -0.5, -0.5, 0.853553, 0.146447, 0.5, 0.146447, -0.853553, 20, 15, 20)
light_color = Color(1, 0.8, 0.6, 1)
light_energy = 3.0
shadow_enabled = true
spot_range = 35.0
spot_angle = 35.0

[node name="SpotLight3" type="SpotLight3D" parent="Environment"]
transform = Transform3D(0, -0.707107, 0.707107, 0.707107, 0.5, 0.5, -0.707107, 0.5, 0.5, 0, 18, -25)
light_color = Color(0.9, 0.9, 1, 1)
light_energy = 2.5
shadow_enabled = true
spot_range = 30.0
spot_angle = 40.0

[node name="SpotLight4" type="SpotLight3D" parent="Environment"]
transform = Transform3D(0, -0.707107, -0.707107, -0.707107, 0.5, 0.5, 0.707107, 0.5, 0.5, 0, 18, 25)
light_color = Color(0.9, 0.9, 1, 1)
light_energy = 2.5
shadow_enabled = true
spot_range = 30.0
spot_angle = 40.0

[node name="AudioSystem" type="Node" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="AudioSystem"]
volume_db = -20.0
autoplay = true

[node name="AmbientSounds" type="AudioStreamPlayer" parent="AudioSystem"]
volume_db = -15.0
autoplay = true

[node name="GunShotSound" type="AudioStreamPlayer" parent="AudioSystem"]
volume_db = -10.0

[node name="ReloadSound" type="AudioStreamPlayer" parent="AudioSystem"]
volume_db = -8.0

[node name="ZombieGroanSound" type="AudioStreamPlayer" parent="AudioSystem"]
volume_db = -12.0

[node name="ZombieDeathSound" type="AudioStreamPlayer" parent="AudioSystem"]
volume_db = -10.0

[node name="PlayerFootsteps" type="AudioStreamPlayer" parent="AudioSystem"]
volume_db = -18.0

[node name="WaveCompleteSound" type="AudioStreamPlayer" parent="AudioSystem"]
volume_db = -8.0

[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
